# crewai-course

./: README.md  command  pyproject.toml  report.md
src/ai_latest_devlopment/: crew.py  main.py
