[project]
name = "ai_latest_devlopment"
version = "0.1.0"
description = "ai-latest-devlopment using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
ai_latest_devlopment = "ai_latest_devlopment.main:run"
run_crew = "ai_latest_devlopment.main:run"
train = "ai_latest_devlopment.main:train"
replay = "ai_latest_devlopment.main:replay"
test = "ai_latest_devlopment.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
